# NEMO_Nowcast

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGES.rst  README.rst  __pkg_metadata__.py  environment-dev.yaml  environment-rtd.yaml  environment-rtd.yml  environment-test.yaml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yaml  pytest-coverage.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml
docs/: CHANGES.rst  Makefile  api.rst  conf.py  development.rst  example_circus.ini  example_nowcast.yaml  index.rst  pkg_development.rst
docs/architecture/: index.rst  log_aggregator.rst  manager.rst  message_broker.rst  messaging.rst  scheduled_workers.rst  scheduler.rst  worker.rst
docs/nowcast_system/: builtin-workers.rst  config.rst  elements.rst  example_circus.ini  example_nowcast.yaml  example_supervisord.ini  index.rst  process_mgmt.rst  toy-example.rst  workers.rst
envs/: environment-dev.yaml  environment-rtd.yaml  environment-test.yaml  requirements.txt
nemo_nowcast/: __about__.py  __init__.py  cli.py  config.py  fileutils.py  lib.py  log_aggregator.py  manager.py  message.py  message_broker.py  next_workers.py  nowcast_broker.py  scheduler.py  worker.py
nemo_nowcast/workers/: awaken.py  clear_checklist.py  example.py  rotate_logs.py  sleep.py
pipelines-test-env/: Dockerfile  bitbucket-pipelines.yml  environment-test.yaml
tests/: test_cli.py  test_config.py  test_lib.py  test_log_aggregator.py  test_manager.py  test_message.py  test_message_broker.py  test_next_workers.py  test_scheduler.py  test_worker.py
tests/workers/: test_awaken.py  test_clear_checklist.py  test_example.py  test_log_aggregator.py  test_rotate_logs.py  test_sleep.py
