# Copyright 2016 – present by Doug Latornell, 43ravens
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NEMO_Nowcast"
dynamic = [ "version" ]
description = "Automation framework for NEMO and other ocean models"
readme = "README.rst"
requires-python = ">=3.12"
license-files = [ "LICENSE" ]
authors = [
    {name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca"}
]
keywords = ["ocean model", "nowcast", "NEMO"]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation,
    # see envs/requirements.txt for package versions used during recent development
    "arrow",
    "attrs",
    "PyYAML",
    "pyzmq",
    "requests",
    "schedule",
    "sentry-sdk",
    "supervisor",
]

[project.urls]
"Documentation" = "https://nemo-nowcast.readthedocs.io/en/latest/NEMO_Nowcast/"
"Changelog" = "https://github.com/43ravens/NEMO_Nowcast/releases"
"Issue Tracker" = "https://github.com/43ravens/NEMO_Nowcast/issues"
"Source Code" = "https://github.com/43ravens/NEMO_Nowcast"

[project.optional-dependencies]
test = ["coverage", "pytest"]
docs = ["sphinx"]


[tool.coverage.run]
branch = true
source = ["nemo_nowcast", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
include = ["nemo_nowcast"]

[tool.hatch.version]
path = "nemo_nowcast/__about__.py"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.dependencies]
arrow = "*"
attrs = "*"
pixi-pycharm = ">=0.0.10,<0.0.11"
python = "*"
pyyaml = "*"
pyzmq = "*"
requests = "*"
sentry-sdk = "*"
supervisor = "*"
schedule = "*"

[tool.pixi.pypi-dependencies]
NEMO_Nowcast = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
test-py312 = ["py312", "test"]
test-py313 = ["py313", "test"]
test-py314 = ["py314", "test"]

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
pytest-randomly = ">=3.15.0,<4"

[tool.pixi.feature.test.tasks]
pytest = "pytest"
pytest-cov = "pytest --cov=./"
pytest-cov-html = "pytest --cov=./ --cov-report html"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
mock = ">=5.2.0,<6"
pillow = ">=12.1.1,<13"
sphinx = "==8.1.3"
sphinx-rtd-theme = "==3.0.0"

[dependency-groups]
docs = ["commonmark>=0.9.1,<0.10", "recommonmark>=0.7.1,<0.8", "readthedocs-sphinx-ext>=2.2.5,<3"]

[tool.pixi.feature.docs.tasks]
docs = { cmd = "make clean html", cwd = "docs/" }
linkcheck = { cmd = "make clean linkcheck", cwd = "docs/" }

[tool.pixi.feature.dev.dependencies]
# For coding style, repo QA, and package management
black = ">=26.1.0,<27"
hatch = ">=1.16.5,<2"
pre-commit = ">=4.5.1,<5"
# For unit tests
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
pytest-randomly = ">=3.15.0,<4"
# For documentation
sphinx = "8.1.3.*"
sphinx-rtd-theme = "3.0.0.*"
